Skróciłem trochę kod w RandomNumGenerator